NetBSD Problem Report #39298

From jakllsch@siwenna.kollasch.net  Wed Aug  6 13:31:52 2008
Return-Path: <jakllsch@siwenna.kollasch.net>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 70E0863B853
	for <gnats-bugs@gnats.NetBSD.org>; Wed,  6 Aug 2008 13:31:52 +0000 (UTC)
Message-Id: <20080806133059.1F4C1E1C7B@siwenna.kollasch.net>
Date: Wed,  6 Aug 2008 13:30:59 +0000 (UTC)
From: jakllsch@siwenna.kollasch.net
Reply-To: jakllsch@siwenna.kollasch.net
To: gnats-bugs@gnats.NetBSD.org
Subject: dd brings system to knees
X-Send-Pr-Version: 3.95

>Number:         39298
>Category:       kern
>Synopsis:       dd brings system to knees
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Aug 06 13:35:00 +0000 2008
>Closed-Date:    Thu Sep 25 10:41:17 +0000 2008
>Last-Modified:  Thu Sep 25 10:45:01 +0000 2008
>Originator:     Jonathan A. Kollasch
>Release:        NetBSD 4.99.71 (August 1st)
>Organization:
>Environment:
System: NetBSD siwenna.kollasch.net 4.99.71 NetBSD 4.99.71 (SIWENNA) #0: Fri Aug 1 05:06:05 UTC 2008 root@siwenna.kollasch.net:/usr/src/sys/arch/i386/compile/SIWENNA i386
Architecture: i386
Machine: i386
>Description:
System responsiveness can be significantly hindered by certian usage patterns,
such as moving a large number of large chunks of /dev/zero to /dev/null.
>How-To-Repeat:
dd if=/dev/zero of=/dev/null bs=100m count=1000
>Fix:
Unknown.

>Release-Note:

>Audit-Trail:
From: David Holland <dholland-bugs@netbsd.org>
To: jakllsch@siwenna.kollasch.net, gnats-bugs@netbsd.org
Cc: kern-bug-people@netbsd.org, gnats-admin@netbsd.org,
	netbsd-bugs@netbsd.org
Subject: Re: kern/39298: dd brings system to knees
Date: Mon, 11 Aug 2008 07:01:45 +0000

 On Wed, Aug 06, 2008 at 01:35:01PM +0000, jakllsch@siwenna.kollasch.net wrote:
  > >How-To-Repeat:
  > dd if=/dev/zero of=/dev/null bs=100m count=1000
                                    ^^^^

 How much is that relative to your RAM size? You're probably just
 flushing memory.

 -- 
 David A. Holland
 dholland@netbsd.org

From: "Jared D. McNeill" <jmcneill@invisible.ca>
To: David Holland <dholland-bugs@netbsd.org>
Cc: jakllsch@siwenna.kollasch.net, gnats-bugs@netbsd.org, 
 kern-bug-people@netbsd.org, gnats-admin@netbsd.org, 
 netbsd-bugs@netbsd.org
Subject: Re: kern/39298: dd brings system to knees
Date: Mon, 11 Aug 2008 06:58:28 -0400

 David Holland wrote:
 > On Wed, Aug 06, 2008 at 01:35:01PM +0000, jakllsch@siwenna.kollasch.net wrote:
 >  > >How-To-Repeat:
 >  > dd if=/dev/zero of=/dev/null bs=100m count=1000
 >                                    ^^^^
 > 
 > How much is that relative to your RAM size? You're probably just
 > flushing memory.

 I was able to reproduce with bs=100m on a machine with 1GB of RAM, 
 didn't try any lower values.

 Cheers,
 Jared

State-Changed-From-To: open->closed
State-Changed-By: ad@NetBSD.org
State-Changed-When: Thu, 25 Sep 2008 10:41:17 +0000
State-Changed-Why:
fixed


From: Andrew Doran <ad@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39298 CVS commit: src/sys/arch
Date: Thu, 25 Sep 2008 10:40:48 +0000 (UTC)

 Module Name:	src
 Committed By:	ad
 Date:		Thu Sep 25 10:40:48 UTC 2008

 Modified Files:
 	src/sys/arch/amd64/amd64: mem.c
 	src/sys/arch/i386/i386: mem.c

 Log Message:
 PR kern/39298 dd brings system to knees

 Make /dev/zero and friends MPSAFE.


 To generate a diff of this commit:
 cvs rdiff -r1.14 -r1.15 src/sys/arch/amd64/amd64/mem.c
 cvs rdiff -r1.69 -r1.70 src/sys/arch/i386/i386/mem.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.