PR kern/39298 dd brings system to knees

Make /dev/zero and friends MPSAFE.